<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:orientation="vertical"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblStatusUpdate"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#000"
        android:textColor="#fff"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/statusHintText"
        android:layout_weight="1"
        android:gravity="top"
        android:id="@+id/txtStatusText"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        android:id="@+id/btnUpdateStatus"
        />


</LinearLayout>